src/main/java/com/toss_bootcamp/test/global/error/CustomException.java
package com.toss_bootcamp.test.global.error;

import lombok.AllArgsConstructor;
import lombok.Getter;

@Getter
@AllArgsConstructor
public class CustomException extends RuntimeException {
    ErrorCode errorCode;
}
